--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/mcleod-reset.css">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="./css/shared.css">
   <!-- MEDIA QUERIES -->
   <link rel="stylesheet" media="(max-width: 767px)" href="./css/main_mobile.css" />
   <link rel="stylesheet" media="(min-width: 768px)" href="./css/main_desktop.css" />
@@ -18,18 +19,27 @@
   <header id="header_desktop">
     <nav>
       <ul>
-        <li>HOME</li>
-        <li>ABOUT</li>
-        <li>CONTACT</li>
-        <li>PORTFOLIO</li>
+        <li><a href="./index.html">HOME</a></li>
+        <li><a href="./about/about.html">ABOUT</a></li>
+        <li><a href="./concat/concat.html">CONTACT</a></li>
+        <li><a href="./portfolio/portfolio.html">PORTFOLIO</a></li>
       </ul>
     </nav>
   </header>
   <header id="header_mobile">
-    <nav>
-      <i class="fas fa-bars"></i>
+    <div id="menu_icon_container">
+      <i id="menu_icon" class="fas fa-bars"></i>
+    </div>
+    <!-- MOBILE NAVIGATION -->
+    <nav id="mobile_menu">
+      <ul>
+        <li><a href="./index.html">HOME</a></li>
+        <li><a href="./about/about.html">ABOUT</a></li>
+        <li><a href="../concat/concat.html">CONTACT</a></li>
+        <li><a href="../portfolio/portfolio.html">PORTFOLIO</a></li>
+      </ul>
     </nav>
-  </header>
+</header>
     <!-- MAIN CONTENT -->
   <main>
     <section id="name">
@@ -49,5 +59,22 @@
       <a href="#"><i class="fab fa-github"></i></a>
     </section>
   </main>
+  <script>
+    document.getElementById("menu_icon").addEventListener("click",toggleMobileMenu);
+    const mobileMenuNode = document.getElementById("mobile_menu");
+    const mobileHeaderNode = document.getElementById("header_mobile");
+
+    let menuVisible = false;
+    function toggleMobileMenu() {
+      if(menuVisible) {
+        mobileMenuNode.style.display = "none";
+        menuVisible = false;
+      }
+      else {
+        mobileMenuNode.style.display = "block";
+        menuVisible = true;
+      }
+    }
+  </script>
 </body>
 </html>
