--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
   <!-- STYLESHEETS -->
   <link rel="stylesheet" href="./css/mcleod-reset.css">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="./css/shared.css">
   <!-- MEDIA QUERIES -->
   <link rel="stylesheet" media="(max-width: 767px)" href="./css/main_mobile.css" />
@@ -23,9 +23,9 @@
     <nav>
       <ul>
         <li><a href="./index.html">HOME</a></li>
-        <li><a href="./about/about.html">ABOUT</a></li>
-        <li><a href="./contact/contact.html">CONTACT</a></li>
-        <li><a href="./portfolio/portfolio.html">PORTFOLIO</a></li>
+        <li><a href="./about/index.html">ABOUT</a></li>
+        <li><a href="./contact/index.html">CONTACT</a></li>
+        <li><a href="./portfolio/index.html">PORTFOLIO</a></li>
       </ul>
     </nav>
   </header>
@@ -37,9 +37,9 @@
     <nav id="mobile_menu">
       <ul>
         <li><a href="./index.html">HOME</a></li>
-        <li><a href="./about/about.html">ABOUT</a></li>
-        <li><a href="../contact/contact.html">CONTACT</a></li>
-        <li><a href="../portfolio/portfolio.html">PORTFOLIO</a></li>
+        <li><a href="./about/index.html">ABOUT</a></li>
+        <li><a href="../contact/index.html">CONTACT</a></li>
+        <li><a href="../portfolio/index.html">PORTFOLIO</a></li>
       </ul>
     </nav>
 </header>
@@ -62,24 +62,6 @@
       <a href="https://github.com/kredenc6" target:"_blank"><i class="fab fa-github"></i></a>
     </section>
   </main>
-  <script>
-    document.getElementById("menu_icon").addEventListener("click",toggleMobileMenu);
-    const mobileMenuNode = document.getElementById("mobile_menu");
-    const menuIconContainerNode = document.getElementById("menu_icon_container");
-
-    let menuVisible = false;
-    function toggleMobileMenu() {
-      if(menuVisible) {
-        mobileMenuNode.style.display = "none";
-        menuIconContainerNode.style.backgroundColor = "rgba(0, 0, 0, 0.1)";
-        menuVisible = false;
-      }
-      else {
-        mobileMenuNode.style.display = "block";
-        menuIconContainerNode.style.backgroundColor = "rgba(0, 0, 0, 0)";
-        menuVisible = true;
-      }
-    }
-  </script>
+  <script src="main.js"></script>
 </body>
 </html>
