--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" media="(max-width: 767px)" href="./css/main_mobile.css" />
   <link rel="stylesheet" media="(min-width: 768px)" href="./css/main_desktop.css" />
   <!-- ICONS -->
+  <link rel="icon" type="image/png" href="./img/favicon.ico">
   <script src="https://kit.fontawesome.com/408ebf63a6.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -31,7 +32,8 @@
   </header>
   <header id="header_mobile">
     <div id="menu_icon_container">
-      <i id="menu_icon" class="fas fa-bars"></i>
+      <svg id="menu_icon"><use xlink:href="#menu"></use></svg>
+      <svg id="close_icon"><use xlink:href="#close"></use></svg>
     </div>
     <!-- MOBILE NAVIGATION -->
     <nav id="mobile_menu">
@@ -42,7 +44,7 @@
         <li><a href="../portfolio/index.html">PORTFOLIO</a></li>
       </ul>
     </nav>
-</header>
+  </header>
     <!-- MAIN CONTENT -->
   <main>
     <section id="name">
@@ -58,10 +60,29 @@
       </h3>
     </section>
     <section id="icons">
-      <a href="#"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/kredenc6" target:"_blank"><i class="fab fa-github"></i></a>
+      <!-- <a href="#"><i class="fab fa-linkedin"></i></a> -->
+      <!-- <a href="https://github.com/kredenc6" target:"_blank"><i class="fab fa-github"></i></a> -->
+      <a href="https://github.com/kredenc6" target:"_blank"><svg><use xlink:href="#linkedIn"></use></svg></a>
+      <a href="#" target:"_blank"><svg><use xlink:href="#github"></use></svg></a>
+      
     </section>
   </main>
-  <script src="main.js"></script>
 </body>
+<!-- SVG -->
+<svg version="1.1" xlmns="http://www.w3.org/2000/svg" style="display: none">
+  <symbol id="github" viewbox="0 0 100 100">
+      <path d="m50 2.5c-26.231 0-47.5 21.82-47.5 48.709 0 21.523 13.614 39.76 32.487 46.206 0.29688 0.06362 0.55134 0.08482 0.8058 0.08482 1.76 0 2.4386-1.2935 2.4386-2.4174 0-1.1663-0.04241-4.2199-0.06362-8.2913-1.7812 0.4029-3.3717 0.57254-4.7924 0.57254-9.1395 0-11.218-7.1038-11.218-7.1038-2.1629-5.6194-5.2801-7.125-5.2801-7.125-4.135-2.9051-0.0212-2.99 0.29688-2.99h0.02121c4.7712 0.42411 7.2734 5.0469 7.2734 5.0469 2.375 4.1562 5.5558 5.3225 8.3973 5.3225 2.2266 0 4.2411-0.72098 5.4286-1.2723 0.42411-3.1384 1.654-5.2801 3.0112-6.51-10.539-1.2299-21.629-5.4074-21.629-24.068 0-5.3225 1.8449-9.6696 4.8772-13.062-0.48772-1.2299-2.1205-6.192 0.46652-12.893 0 0 0.33929-0.10603 1.0603-0.10603 1.7176 0 5.5982 0.65737 12.002 5.1105 3.7958-1.0815 7.846-1.6116 11.896-1.6328 4.029 0.02121 8.1004 0.55134 11.896 1.6328 6.404-4.4531 10.285-5.1105 12.002-5.1105 0.72098 0 1.0603 0.10603 1.0603 0.10603 2.5871 6.7009 0.95424 11.663 0.46652 12.893 3.0324 3.4141 4.8772 7.7612 4.8772 13.062 0 18.703-11.112 22.817-21.693 24.026 1.6964 1.5056 3.2232 4.4743 3.2232 9.0123 0 6.51-0.06362 11.769-0.06362 13.359 0 1.1451 0.65737 2.4386 2.4174 2.4386 0.25446 0 0.55134-0.0212 0.84821-0.08482 18.894-6.4464 32.487-24.704 32.487-46.206 0-26.888-21.269-48.709-47.5-48.709z"/>
+  </symbol>
+  <symbol id="linkedIn" viewbox="0 0 100 100">
+    <path d="m89.903 2.5h-79.286c-4.3305 0-8.1167 3.118-8.1167 7.3991v79.459c0 4.3058 3.7861 8.1414 8.1167 8.1414h79.261c4.3553 0 7.6218-3.8604 7.6218-8.1414v-79.459c0.02475-4.2811-3.2665-7.3991-7.597-7.3991zm-57.955 79.187h-13.61v-42.316h13.61zm-6.335-48.75h-0.09898c-4.3553 0-7.1763-3.2417-7.1763-7.3001 0-4.1326 2.8953-7.3001 7.3496-7.3001 4.4543 0 7.1763 3.1427 7.2753 7.3001 0 4.0583-2.821 7.3001-7.3496 7.3001zm56.074 48.75h-13.61v-23.138c0-5.5431-1.9797-9.3293-6.9041-9.3293-3.7614 0-5.9885 2.5488-6.9784 5.0234-0.37119 0.89086-0.47017 2.1034-0.47017 3.3407v24.103h-13.61v-42.316h13.61v5.8896c1.9797-2.821 5.0729-6.8794 12.274-6.8794 8.9333 0 15.689 5.8896 15.689 18.584z"/>
+  </symbol>
+  <symbol id="menu" viewbox="0 0 100 100">
+    <path d="m93.542 16.071h-87.083c-2.1771 0-3.9583-3.0536-3.9583-6.7857 0-3.7321 1.7812-6.7857 3.9583-6.7857h87.083c2.1771 0 3.9583 3.0536 3.9583 6.7857 0 3.7321-1.7812 6.7857-3.9583 6.7857zm0 40.714h-87.083c-2.1771 0-3.9583-3.0536-3.9583-6.7857s1.7812-6.7857 3.9583-6.7857h87.083c2.1771 0 3.9583 3.0536 3.9583 6.7857s-1.7812 6.7857-3.9583 6.7857zm0 40.714h-87.083c-2.1771 0-3.9583-3.0536-3.9583-6.7857s1.7812-6.7857 3.9583-6.7857h87.083c2.1771 0 3.9583 3.0536 3.9583 6.7857s-1.7812 6.7857-3.9583 6.7857z"/>
+  </symbol>
+  <symbol id="close" viewbox="0 0 100 100">
+    <path d="m97.5 11.999-9.4994-9.4994-38.001 38.001-38.001-38.001-9.4994 9.4994 38.001 38.001-38.001 38.001 9.4994 9.4994 38.001-38.001 38.001 38.001 9.4994-9.4994-38.001-38.001z"/>
+  </symbol>
+</svg>
+<!-- SCRIPTS -->
+<script src="main.js"></script>
 </html>
