prefixed, minified + about page finished + small fixes

--- a/about/index.html
+++ b/about/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Filip Srankota</title>
+  <title>Filip Srankota • Web Developer</title>
   <!-- FONTS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap">
   <!-- STYLESHEETS -->
-  <link rel="stylesheet" href="../../css/mcleod-reset.css">
+  <link rel="stylesheet" href="../css/mcleod-reset.css">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="./css/shared.css">
   <!-- MEDIA QUERIES -->
@@ -16,7 +16,6 @@
   <link rel="stylesheet" media="(min-width: 768px)" href="./css/main_desktop.css" />
   <!-- ICONS -->
   <link rel="icon" type="image/png" href="../img/favicon.ico">
-  <script src="https://kit.fontawesome.com/408ebf63a6.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- HEADERS -->
@@ -63,13 +62,13 @@
       <div id="info1">
         <img src="../img/my_picture.jpg" width="250px" height="250px" alt="nice picture of me">
         <p>...introducing myself. My name is Filip&nbsp;Šrankota.<br>
-          I'm a self-tought web developer based near Prague. My main focus has mostly been on front-end web development.
+          I'm a self-tought web developer based near Prague. My main focus has mostly been on front-end.
           Some of my skills are demonstrated on this site and in the portfolio page. They include HTML, CSS, 
           JavaScript and ReactJS.
         </p>
       </div>
       <div id="info2">
-        <p>I'm looking for a job position&nbsp;- junior web developer to keep growing my skills and applying those I've already learned.</p>
+        <p>I'm looking for a job position&nbsp;- junior web developer to start working with a team, keep growing my skills and applying those I've already learned.</p>
         <p>If you are interested in working with me or want more information about my work, I would love to hear from you! 
           You can contact me by filling out the form on the contact page.
         </p>
