--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Filip Srankota</title>
+  <title>Filip Srankota • Web Developer</title>
   <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
   <!-- STYLESHEETS -->
@@ -16,7 +16,6 @@
   <link rel="stylesheet" media="(min-width: 768px)" href="./css/main_desktop.css" />
   <!-- ICONS -->
   <link rel="icon" type="image/png" href="./img/favicon.ico">
-  <script src="https://kit.fontawesome.com/408ebf63a6.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- HEADERS -->
@@ -60,11 +59,20 @@
       </h3>
     </section>
     <section id="icons">
-      <!-- <a href="#"><i class="fab fa-linkedin"></i></a> -->
-      <!-- <a href="https://github.com/kredenc6" target:"_blank"><i class="fab fa-github"></i></a> -->
-      <a href="https://github.com/kredenc6" target:"_blank"><svg><use xlink:href="#linkedIn"></use></svg></a>
-      <a href="#" target:"_blank"><svg><use xlink:href="#github"></use></svg></a>
-      
+      <a
+        href="https://www.linkedin.com/in/filip-srankota"
+        target="_blank"
+        rel="noreferrer noopener"
+      >
+        <svg><use xlink:href="#linkedIn"></use></svg>
+      </a>
+      <a
+      href="https://github.com/kredenc6"
+        target="_blank"
+        rel="noreferrer noopener"
+      >
+        <svg><use xlink:href="#github"></use></svg>
+      </a>
     </section>
   </main>
 </body>
