--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Filip Srankota</title>
+  <title>Filip Srankota • Web Developer</title>
   <!-- FONTS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap">
   <!-- STYLESHEETS -->
-  <link rel="stylesheet" href="../../css/mcleod-reset.css">
+  <link rel="stylesheet" href="../css/mcleod-reset.css">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="./css/shared.css">
   <!-- MEDIA QUERIES -->
@@ -16,7 +16,6 @@
   <link rel="stylesheet" media="(min-width: 768px)" href="./css/main_desktop.css" />
   <!-- ICONS -->
   <link rel="icon" type="image/png" href="../img/favicon.ico">
-  <script src="https://kit.fontawesome.com/408ebf63a6.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- HEADERS -->
@@ -66,7 +65,7 @@
             <img src="../img/pex1res.jpg" alt="pexeso">
           </figure>
         </a>
-        <a href="#" class="live_version" target="_blank"><i class="fas fa-eye"></i> Live Version</a>
+        <a href="https://infallible-lichterman-a94e0f.netlify.com/" class="live_version" target="_blank"><i class="fas fa-eye"></i> Live Version</a>
         <a href="https://www.github.com/kredenc6/Pexeso" class="view_code" target="_blank">
           <i class="fab fa-github"></i> View Code
         </a>
