--- a/contact/index.html
+++ b/contact/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Filip Srankota</title>
+  <title>Filip Srankota • Web Developer</title>
   <!-- FONTS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap">
   <!-- STYLESHEETS -->
-  <link rel="stylesheet" href="../../css/mcleod-reset.css">
+  <link rel="stylesheet" href="../css/mcleod-reset.css">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="./css/shared.css">
   <link rel="stylesheet" href="./css/spinner.css">
@@ -17,7 +17,6 @@
   <link rel="stylesheet" media="(min-width: 768px)" href="./css/main_desktop.css" />
   <!-- ICONS -->
   <link rel="icon" type="image/png" href="../img/favicon.ico">
-  <script src="https://kit.fontawesome.com/408ebf63a6.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- HEADERS -->
