--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,7 +10,7 @@
   <!-- STYLESHEETS -->
   <link rel="stylesheet" href="../css/mcleod-reset.css">
   <link rel="stylesheet" href="../style.css">
-  <link rel="stylesheet" href="./css/shared.css">
+  <link rel="stylesheet" href="./css/sharedDev.css">
   <!-- MEDIA QUERIES -->
   <link rel="stylesheet" media="(max-width: 767px)" href="./css/main_mobile.css" />
   <link rel="stylesheet" media="(min-width: 768px)" href="./css/main_desktop.css" />
@@ -65,9 +65,11 @@
             <img src="../img/pex1res.jpg" alt="pexeso">
           </figure>
         </a>
-        <a href="https://infallible-lichterman-a94e0f.netlify.com/" class="live_version" target="_blank"><i class="fas fa-eye"></i> Live Version</a>
-        <a href="https://www.github.com/kredenc6/Pexeso" class="view_code" target="_blank">
-          <i class="fab fa-github"></i> View Code
+        <a href="https://infallible-lichterman-a94e0f.netlify.com/" class="live_version">
+          <svg class="portfolio_icon"><use xlink:href="#eye"></use></svg>Live Version
+        </a>
+        <a href="https://www.github.com/kredenc6/Pexeso" class="view_code">
+          <svg class="portfolio_icon"><use xlink:href="#github"></use></svg>View Code
         </a>
       </article>
       <article id="calculator" class="project">
@@ -76,14 +78,25 @@
             <img src="../img/calcres.jpg" alt="calculator">
           </figure>
         </a>
-        <a href="#" class="live_version" target="_blank"><i class="fas fa-eye"></i> Live Version</a>
-        <a href="#" class="view_code" target="_blank"><i class="fab fa-github"></i> View Code</a>
+        <a href="https://sad-meitner-4bcac4.netlify.com/" class="live_version">
+          <svg class="portfolio_icon"><use xlink:href="#eye"></use></svg>Live Version
+        </a>
+        <a href="https://github.com/kredenc6/calculator" class="view_code">
+          <svg class="portfolio_icon"><use xlink:href="#github"></use></svg>View Code
+        </a>
       </article>
     </section>
   </main>
 </body>
 <!-- SVG -->
 <svg version="1.1" xlmns="http://www.w3.org/2000/svg" style="display: none">
+  <symbol id="github" viewbox="0 0 100 100">
+      <path d="m50 2.5c-26.231 0-47.5 21.82-47.5 48.709 0 21.523 13.614 39.76 32.487 46.206 0.29688 0.06362 0.55134 0.08482 0.8058 0.08482 1.76 0 2.4386-1.2935 2.4386-2.4174 0-1.1663-0.04241-4.2199-0.06362-8.2913-1.7812 0.4029-3.3717 0.57254-4.7924 0.57254-9.1395 0-11.218-7.1038-11.218-7.1038-2.1629-5.6194-5.2801-7.125-5.2801-7.125-4.135-2.9051-0.0212-2.99 0.29688-2.99h0.02121c4.7712 0.42411 7.2734 5.0469 7.2734 5.0469 2.375 4.1562 5.5558 5.3225 8.3973 5.3225 2.2266 0 4.2411-0.72098 5.4286-1.2723 0.42411-3.1384 1.654-5.2801 3.0112-6.51-10.539-1.2299-21.629-5.4074-21.629-24.068 0-5.3225 1.8449-9.6696 4.8772-13.062-0.48772-1.2299-2.1205-6.192 0.46652-12.893 0 0 0.33929-0.10603 1.0603-0.10603 1.7176 0 5.5982 0.65737 12.002 5.1105 3.7958-1.0815 7.846-1.6116 11.896-1.6328 4.029 0.02121 8.1004 0.55134 11.896 1.6328 6.404-4.4531 10.285-5.1105 12.002-5.1105 0.72098 0 1.0603 0.10603 1.0603 0.10603 2.5871 6.7009 0.95424 11.663 0.46652 12.893 3.0324 3.4141 4.8772 7.7612 4.8772 13.062 0 18.703-11.112 22.817-21.693 24.026 1.6964 1.5056 3.2232 4.4743 3.2232 9.0123 0 6.51-0.06362 11.769-0.06362 13.359 0 1.1451 0.65737 2.4386 2.4174 2.4386 0.25446 0 0.55134-0.0212 0.84821-0.08482 18.894-6.4464 32.487-24.704 32.487-46.206 0-26.888-21.269-48.709-47.5-48.709z"/>
+  </symbol>
+  <symbol id="eye" viewbox="0 0 100 100">
+    <path d="m49.949 2.5c-17.048 0-30.491 16.691-46.564 43.97-1.1662 2.0122-1.1874 5.0139-0.021204 7.026 13.761 23.651 25.89 44.003 46.585 44.003 20.441 0 35.771-25.63 46.67-44.201 1.1238-1.9132 1.1874-4.816 0.10602-6.8281-11.111-20.946-26.484-43.97-46.776-43.97zm0.93297 77.155c-11.238 0.79167-20.483-13.59-19.953-31.04 0.44528-15.24 8.3755-27.576 18.172-28.269 11.238-0.79167 20.483 13.59 19.953 31.04-0.44528 15.24-8.3755 27.576-18.172 28.269z"/>
+    <path d="m49.991 34.497c0-1.9792 0.23324-3.8594 0.65732-5.5747-0.21204 0-0.42408-0.03299-0.65732-0.03299-7.8242 0-14.122 10.358-13.528 22.727 0.50889 10.325 5.8523 18.637 12.489 19.429 7.9515 0.92362 14.609-8.8733 14.609-21.045 0-0.42882-0.0212-0.85764-0.0212-1.2865-1.1874 0.82465-2.4809 1.2865-3.8591 1.2865-5.3434 0-9.6902-6.9601-9.6902-15.503z"/>
+</symbol>
   <symbol id="menu" viewbox="0 0 100 100">
     <path d="m93.542 16.071h-87.083c-2.1771 0-3.9583-3.0536-3.9583-6.7857 0-3.7321 1.7812-6.7857 3.9583-6.7857h87.083c2.1771 0 3.9583 3.0536 3.9583 6.7857 0 3.7321-1.7812 6.7857-3.9583 6.7857zm0 40.714h-87.083c-2.1771 0-3.9583-3.0536-3.9583-6.7857s1.7812-6.7857 3.9583-6.7857h87.083c2.1771 0 3.9583 3.0536 3.9583 6.7857s-1.7812 6.7857-3.9583 6.7857zm0 40.714h-87.083c-2.1771 0-3.9583-3.0536-3.9583-6.7857s1.7812-6.7857 3.9583-6.7857h87.083c2.1771 0 3.9583 3.0536 3.9583 6.7857s-1.7812 6.7857-3.9583 6.7857z"/>
   </symbol>
