small styling changes for browser compatibility

--- a/contact/index.html
+++ b/contact/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="./css/shared.css">
   <link rel="stylesheet" href="./css/spinner.css">
   <!-- MEDIA QUERIES -->
-  <link rel="stylesheet" media="(max-width: 767px)" href="./css/main_mobile.css" />
+  <link rel="stylesheet" media="(max-width: 767px)" href="./css/main_mobileDev.css" />
   <link rel="stylesheet" media="(min-width: 768px)" href="./css/main_desktop.css" />
   <!-- ICONS -->
   <link rel="icon" type="image/png" href="../img/favicon.ico">
