--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="./css/shared.css">
   <!-- MEDIA QUERIES -->
-  <link rel="stylesheet" media="(max-width: 767px)" href="./css/main_mobile.css" />
+  <link rel="stylesheet" media="(max-width: 767px)" href="./css/main_mobileDev.css" />
   <link rel="stylesheet" media="(min-width: 768px)" href="./css/main_desktop.css" />
   <!-- ICONS -->
   <link rel="icon" type="image/png" href="../img/favicon.ico">
@@ -55,7 +55,7 @@
     <section id="introduction">
       <h3>
         Feel free to take
-        <span class="yellow">a look</span>
+        <span class="yellow">a&nbsp;look</span>
       </h3>
     </section>
     <section id="portfolio">
