trying flex-shrink

--- a/about/index.html
+++ b/about/index.html
@@ -10,10 +10,10 @@
   <!-- STYLESHEETS -->
   <link rel="stylesheet" href="../css/mcleod-reset.css">
   <link rel="stylesheet" href="../style.css">
-  <link rel="stylesheet" href="./css/shared.css">
+  <link rel="stylesheet" href="./css/sharedDev.css">
   <!-- MEDIA QUERIES -->
-  <link rel="stylesheet" media="(max-width: 767px)" href="./css/main_mobile.css" />
-  <link rel="stylesheet" media="(min-width: 768px)" href="./css/main_desktop.css" />
+  <link rel="stylesheet" media="(max-width: 767px)" href="./css/main_mobileDev.css" />
+  <link rel="stylesheet" media="(min-width: 768px)" href="./css/main_desktopDev.css" />
   <!-- ICONS -->
   <link rel="icon" type="image/png" href="../img/favicon.ico">
 </head>
@@ -60,7 +60,7 @@
     </section>
     <section id="info">
       <div id="info1">
-        <img src="../img/my_picture.jpg" width="250px" height="250px" alt="nice picture of me">
+        <img src="../img/my_picture.jpg" alt="nice picture of me">
         <p>...introducing myself. My name is Filip&nbsp;Šrankota.<br>
           I'm a self-tought web developer based near Prague. My main focus has mostly been on front-end.
           Some of my skills are demonstrated on this site and in the portfolio page. They include HTML, CSS, 
