--- a/about/index.html
+++ b/about/index.html
@@ -10,10 +10,10 @@
   <!-- STYLESHEETS -->
   <link rel="stylesheet" href="../css/mcleod-reset.css">
   <link rel="stylesheet" href="../style.css">
-  <link rel="stylesheet" href="./css/sharedDev.css">
+  <link rel="stylesheet" href="./css/shared.css">
   <!-- MEDIA QUERIES -->
-  <link rel="stylesheet" media="(max-width: 767px)" href="./css/main_mobileDev.css" />
-  <link rel="stylesheet" media="(min-width: 768px)" href="./css/main_desktopDev.css" />
+  <link rel="stylesheet" media="(max-width: 767px)" href="./css/main_mobile.css" />
+  <link rel="stylesheet" media="(min-width: 768px)" href="./css/main_desktop.css" />
   <!-- ICONS -->
   <link rel="icon" type="image/png" href="../img/favicon.ico">
 </head>
