first facebook SDK steps

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       >
         <svg><use xlink:href="#github"></use></svg>
       </a>
+      <button id="share-button">test</button>
     </section>
   </main>
 </body>
@@ -93,4 +94,7 @@
 </svg>
 <!-- SCRIPTS -->
 <script src="main.js"></script>
+<!-- FB SDK -->
+<script src="fbSDK.js"></script>
+<script async defer src="https://connect.facebook.net/en_US/sdk.js"></script>
 </html>
